# raulperula_portfolio_genai

./: LICENSE  README.md  app_home.py  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
home/: 0_Sobre_mi.py
projects/: 1_Copilot_Summarization.py  2_Chatbot_Q&A.py
