[tool.poetry]
name = "raulperula_portfolio_genai"
version = "0.0.1"
description = ""
authors = ["Raúl Pérula-Martínez"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
